--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -3,36 +3,36 @@ name: Linux Build & Test
 on: [push, pull_request]
 
 jobs:
-  standard:
+  build:
     strategy:
       fail-fast: false
       matrix:
         include: 
-          - name: Debug Build & Unit Tests (gcc)
+          - build_name: "Debug Build & Unit Tests (gcc)"
             cmd_deps: ""
             cmd_action: unit_tests
-          - name: Debug Build & Unit Tests with multithreading (gcc)
+          - build_name: "Debug Build & Unit Tests with multithreading (gcc)"
             cmd_deps: ""
             cmd_action: unit_tests_mt
-          - name: Debug Build & Unit Tests with Alarms&Conditions (gcc)
+          - build_name: "Debug Build & Unit Tests with Alarms&Conditions (gcc)"
             cmd_deps: ""
             cmd_action: unit_tests_alarms
-          - name: Debug Build & Unit Tests (clang)
+          - build_name: "Debug Build & Unit Tests (clang)"
             cmd_deps: sudo apt-get install -y -qq clang-11 clang-tools-11
             cmd_action: CC=clang-11 CXX=clang++-11 unit_tests
-          - name: Debug Build & Unit Tests (tcc)
+          - build_name: "Debug Build & Unit Tests (tcc)"
             cmd_deps: sudo apt-get install -y -qq tcc
             cmd_action: CC=tcc unit_tests
-          - name: Encryption (MbedTLS) Build & Unit Tests (gcc)
+          - build_name: "Encryption (MbedTLS) Build & Unit Tests (gcc)"
             cmd_deps: sudo apt-get install -y -qq libmbedtls-dev
             cmd_action: unit_tests_encryption MBEDTLS
-          - name: PubSub Encryption (MbedTLS) Build & Unit Tests (gcc)
+          - build_name: "PubSub Encryption (MbedTLS) Build & Unit Tests (gcc)"
             cmd_deps: sudo apt-get install -y -qq libmbedtls-dev
             cmd_action: unit_tests_encryption_mbedtls_pubsub
-          - name: Encryption (OpenSSL) Build & Unit Tests (gcc)
+          - build_name: "Encryption (OpenSSL) Build & Unit Tests (gcc)"
             cmd_deps: sudo apt-get install -y -qq openssl
             cmd_action: unit_tests_encryption OPENSSL
-          - name: Encryption (LibreSSL) Build & Unit Tests (gcc)
+          - build_name: "Encryption (LibreSSL) Build & Unit Tests (gcc)"
             cmd_deps: |
                 sudo apt-get install -y -qq curl
                 curl https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.3.3.tar.gz --output libressl.tar.gz
@@ -41,7 +41,7 @@ jobs:
                 ./configure
                 sudo make install
             cmd_action: unit_tests_encryption LIBRESSL
-          - name: TPM Tool Build
+          - build_name: "TPM Tool Build"
             cmd_deps: |
                 sudo apt-get install -y -qq acl autoconf autoconf-archive automake build-essential cmake doxygen gcc git iproute2 libcurl4-openssl-dev libjson-c-dev libcmocka0 libcmocka-dev libgcrypt20-dev libglib2.0-dev libini-config-dev libmbedtls-dev libssl-dev libsqlite3-dev libtool libyaml-dev pkg-config procps python3-pip sqlite3 udev uthash-dev
                 cd ${HOME}
@@ -67,21 +67,22 @@ jobs:
                 sudo pip3 install pyasn1_modules
                 pip3 install .
             cmd_action: build_tpm_tool
-          - name: Release Build
+          - build_name: "Release Build"
             cmd_deps: sudo apt-get install -y -qq libmbedtls-dev
             cmd_action: build_release
-          - name: Amalgamation Build
+          - build_name: Amalgamation Build
             cmd_deps: ""
             cmd_action: build_amalgamation
-          - name: Valgrind Build & Unit Tests /w MbedTLS (gcc)
+          - build_name: "Valgrind Build & Unit Tests with MbedTLS (gcc)"
             cmd_deps: sudo apt-get install -y -qq valgrind libmbedtls-dev
             cmd_action: unit_tests_valgrind MBEDTLS
-          - name: Valgrind Build & Unit Tests /w OpenSSL (gcc)
+          - build_name: "Valgrind Build & Unit Tests with OpenSSL (gcc)"
             cmd_deps: sudo apt-get install -y -qq valgrind openssl
             cmd_action: unit_tests_valgrind OPENSSL
-          - name: Clang Static Analyzer
+          - build_name: "Clang Static Analyzer"
             cmd_deps: sudo apt-get install -y -qq clang-11 clang-tools-11 libmbedtls-dev
             cmd_action: build_clang_analyzer
+    name: ${{matrix.build_name}}
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
@@ -92,7 +93,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y -qq python3-sphinx graphviz check
         ${{ matrix.cmd_deps }}
-    - name: ${{matrix.name}}
+    - name: ${{matrix.build_name}}
       run: source tools/ci.sh && ${{matrix.cmd_action}}
       env:
         ETHERNET_INTERFACE: eth0
