disable PUBSUB_MQTT for WIN32 again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1061,14 +1061,18 @@ if(UA_ENABLE_PUBSUB)
         endif()
     endif()
     if(UA_ENABLE_PUBSUB_MQTT)
-      list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/mqtt-c/mqtt_pal.h
-        ${PROJECT_SOURCE_DIR}/deps/mqtt-c/mqtt.h
-        ${PROJECT_SOURCE_DIR}/plugins/ua_network_pubsub_mqtt.h
-        ${PROJECT_SOURCE_DIR}/plugins/mqtt/ua_mqtt_adapter.h)
-      list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/mqtt/ua_mqtt_pal.c
-        ${PROJECT_SOURCE_DIR}/deps/mqtt-c/mqtt.c
-        ${PROJECT_SOURCE_DIR}/plugins/ua_network_pubsub_mqtt.c
-        ${PROJECT_SOURCE_DIR}/plugins/mqtt/ua_mqtt_adapter.c)
+        if(WIN32)
+            MESSAGE(WARNING "Multithreading is enabled in MQTT plugin. This feature is under development and marked as EXPERIMENTAL")
+        else()
+            list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/mqtt-c/mqtt_pal.h
+                                               ${PROJECT_SOURCE_DIR}/deps/mqtt-c/mqtt.h
+                                               ${PROJECT_SOURCE_DIR}/plugins/ua_network_pubsub_mqtt.h
+                                               ${PROJECT_SOURCE_DIR}/plugins/mqtt/ua_mqtt_adapter.h)
+            list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/mqtt/ua_mqtt_pal.c
+                                               ${PROJECT_SOURCE_DIR}/deps/mqtt-c/mqtt.c
+                                               ${PROJECT_SOURCE_DIR}/plugins/ua_network_pubsub_mqtt.c
+                                               ${PROJECT_SOURCE_DIR}/plugins/mqtt/ua_mqtt_adapter.c)
+        endif()
     endif()
     if(UA_ENABLE_MALLOC_SINGLETON AND UA_ENABLE_PUBSUB_BUFMALLOC)
         list(APPEND lib_sources ${PROJECT_SOURCE_DIR}/src/pubsub/ua_pubsub_bufmalloc.c)
