--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1230,7 +1230,7 @@ ua_generate_datatypes(
     TARGET_SUFFIX "transport"
     NAMESPACE_IDX 1
     FILE_CSV "${UA_FILE_NODEIDS}"
-    IMPORT_BSD "${UA_FILE_TYPES_BSD}#TYPES"
+    IMPORT_BSD "TYPES#${UA_FILE_TYPES_BSD}"
     FILES_BSD "${PROJECT_SOURCE_DIR}/tools/schema/Custom.Opc.Ua.Transport.bsd"
     FILES_SELECTED "${PROJECT_SOURCE_DIR}/tools/schema/datatypes_transport.txt"
 )
