test(pubsub): add unit tests for SKS client functionality
The test suit includes following test cases:

@testcases:
- AddWriterGroupWithValidConfig
- AddReaderGroupWithValidConfig
- SetInvalidSKSClient
- checkPublishedValuesInUserLand
- PublisherSubscriberTogethor
- DelayedSubscriber
- FatchNextBatchofKeys
- invalid SKS endpointUrl

Signed-off-by: Muddasir Shakil <muddasir.shakil@linutronix.de>
Reviewed-by: Kurt Kanzenbach <kurt@linutronix.de>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -344,6 +344,7 @@ if(UA_ENABLE_PUBSUB)
             ua_add_test(pubsub/check_pubsub_sks_push.c)
             ua_add_test(pubsub/check_pubsub_sks_pull.c)
             ua_add_test(pubsub/check_pubsub_sks_securitygroups.c)
+            ua_add_test(pubsub/check_pubsub_sks_client.c)
         endif()
     endif()
 
